--- a/non-react/index.html
+++ b/non-react/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sketchbook</title>
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sketchbook</title>
-  <!-- <link rel="stylesheet" href="styles.css"> -->
-</head>
-
-<body>
-  <div>Sketchbook</div>
-  <!-- <script src="./arithmetics.js"></script> -->
-  <script src="./random.js"></script>
-</body>
-
+  <body>
+    <div>Sketchbook</div>
+    <!-- <script src="./arithmetics.js"></script> -->
+    <script src="./random.js"></script>
+  </body>
 </html>
