--- a/non-react/index.html
+++ b/non-react/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sketchbook</title>
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-  </head>
 
-  <body>
-    <div>Sketchbook</div>
-    <!-- <script src="./arithmetics.js"></script> -->
-    <script src="./random.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sketchbook</title>
+  <!-- <link rel="stylesheet" href="styles.css"> -->
+</head>
+
+<body>
+  <div>Sketchbook</div>
+  <button id="button">Click</button>
+  <button id="button2">Click 2</button>
+  <!-- <script src="./arithmetics.js"></script> -->
+  <script src="./random.js"></script>
+</body>
+
 </html>
