--- a/non-react/index.html
+++ b/non-react/index.html
@@ -13,7 +13,7 @@
   <button id="button">Click</button>
   <button id="button2">Click 2</button>
   <!-- <script src="./arithmetics.js"></script> -->
-  <script src="./random.js"></script>
+  <script src="./section3.js"></script>
 </body>
 
 </html>
