add dom learning

--- a/non-react/index.html
+++ b/non-react/index.html
@@ -12,8 +12,10 @@
   <div>Sketchbook</div>
   <button id="button">Click</button>
   <button id="button2">Click 2</button>
+  <div id="target" class="target">Target me</div>
+  <div id="hello">Hello world!</div>
   <!-- <script src="./arithmetics.js"></script> -->
-  <script src="./section5.js"></script>
+  <script src="./dom.js"></script>
 </body>
 
 </html>
